package com.directi.training.isp.exercise_refactored;

public interface SensingObject
{
    void proximityCallback();
}