package com.directi.training.isp.exercise_refactored;

public interface TimedObject
{
    void timeOutCallback();
}